# meteoforge

./: .gitignore  .markdownlint.yaml  .markdownlint.yml  .markdownlintignore  .pre-commit-config.yaml  .sonarcloud.properties  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  LICENSE.md  PROJECT_GOVERNANCE.md  README.md  README.rst  SECURITY.md  mkdocs.yml  pyproject.toml  sonar-project.properties
.github/: dependabot.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE-REQUEST.yml  bug_report.md  feature_request.md
.github/workflows/: allowed-pr-sources-dev-release.yaml  allowed-pr-sources-main.yaml  gh-pages-deployment.yaml  openssf-scorecard.yml  pr-quality-gate.yaml.yml  scorecard.yml
.github/workflows/pre-commit/: action.yaml
.github/workflows/pytest/: action.yaml
.github/workflows/python-version-parser/: action.yaml
.github/workflows/sonar/: action.yaml
.github/workflows/trivy/: action.yaml
LICENSES/: CC-BY-2.5.txt
docs/gh-pages/: history.md  index.md  project-history.md  project_component.md
docs/tutorials/: accessing-model-data.md
src/meteoforge/: __init__.py
src/meteoforge/logging/: logging.py  logging_config.yaml
src/meteoforge/spatial_temporal/: __init__.py  locations.py
src/meteoforge/unit_interfaces/: locations.py
src/meteoforge_libraries/formats/: annotations.py  factors.py  locations.py  periods.py
src/meteoforge_libraries/models/: base_model.py  model_mixins.py  model_types.py  predictive_model.py
src/meteoforge_libraries/storage/: __init__.py
src/meteoforge_tools/: README.md
src/weather_provider_libraries/core/: manager.py  model.py  provider.py
tests/: test_example_test.py
