[tool.poetry]
name = "meteoforge"
version = "0.4.0"
description = "The Weather Provider Libraries for the Weather Provider Access Suite project"
authors = ["Raoul Linnenbank <58594297+rflinnenbank@users.noreply.github.com>"]
license = "MPL2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
xarray = "^2025.7.1"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
h5netcdf = "^1.6.3"
pyproj = "^3.7.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
coverage = "^7.9.2"
mypy = "^1.16.1"
ruff = "^0.12.2"
pre-commit = "^3.8.0"
pytest-cov = "^6.2.1"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.15"
mkdocstrings = { extras = ["python"], version = "^0.29.1" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Tool configuration:
[tool.ruff]
output-format = "github"
line-length = 120
show-fixes = true
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "migrations",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflake
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pydocstyle
    "D",
]
ignore = [
    # Missing docstring in public module
    "D100",
    # Missing docstring in public package
    "D104",
    #  `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible. Ignoring `one-blank-line-before-class`.
    "D203",
    # `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible. Ignoring `multi-line-summary-second-line`.
    "D213",
]

[tool.ruff.lint.per-file-ignores]
# Allow longer line length in conftest where many 1-line dictinaries are specified
"conftest.py" = ["E501"]

[tool.mypy]
mypy_path = "src"
files = "src/weather_provider_libraries"
strict = true

[tool.pytest.ini_options]
addopts = [
  "--cov",
  "--cov-branch",
  "--cov-report=xml",
  "--cov-report=term-missing"  # Coverage report incl missing lines in terminal
]
minversion = "8.3.2"
testpaths = ["tests"]

[tool.coverage.run]
relative_files = false
omit = [
    "tests/*",
    ".venv/*",
]
